--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-26  Kim F. Storm  <storm@cua.dk>
+
+	* xdisp.c (move_it_in_display_line_to): If overflow-newline-into-fringe
+	is enabled, return MOVE_LINE_CONTINUED rather than MOVE_POS_MATCH_OR_ZV
+	if target position is at end of display line but char is not a newline.
+
 2004-07-25  Richard M. Stallman  <rms@gnu.org>
 
 	* window.c (coordinates_in_window): Return ON_SCROLL_BAR
@@ -6,7 +12,7 @@
 
 	* dispextern.h (enum window_part): Add ON_SCROLL_BAR.
 
-	* window.c (Fcoordinates_in_window_p): 
+	* window.c (Fcoordinates_in_window_p):
 	Take account of FRAME_INTERNAL_BORDER_WIDTH.
 
 	* alloc.c (check_cons_list): New function (contents commented out).
