--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-27  Werner Lemberg  <wl@gnu.org>
+
+	* NEWS: Document all new tutorials.
+
 2004-07-14  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* MORE.STUFF: Tramp is now distributed with Emacs.
