--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-28  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* eval.c (Fdefvar, Fdefconst): Doc fixes.
+
 2004-07-27  Kim F. Storm  <storm@cua.dk>
 
 	* xdisp.c (move_it_in_display_line_to): Check BUFFER_POS_REACHED_P after
