*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-31  Eli Zaretskii  <eliz@gnu.org>
+
+	* config.bat: Update URLs in the comments.
+
 2004-07-05  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.in (install-arch-indep): Remove .arch-inventory files.
