--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,7 +1,11 @@
 2004-08-02  Reiner Steib  <Reiner.Steib@gmx.de>
 
+	* Makefile.in, makefile.w32-in: Added PGG and Sieve files.
+
 	* pgg.texi, sieve.texi: Import from the v5_10 branch of the Gnus
-	repository.
+	repository.  Change setfilename.
+
+	* emacs-mime.texi, gnus-faq.texi, gnus.texi, message.texi: Ditto.
 
 2004-07-18  Luc Teirlinck  <teirllm@auburn.edu>
 
