--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-02  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* info/.cvsignore: Added pgg and sieve.
+
 2004-07-05  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.in (install-arch-indep): Remove .arch-inventory files.
