*** empty log message ***

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -2187,6 +2187,10 @@ configuration files.
 
 * Lisp Changes in Emacs 21.4
 
+** Function `compute-motion' now calculates the usable window
+width if the WIDTH argument is nil.  If the TOPOS argument is nil,
+the usable window height and width is used.
+
 +++
 ** `visited-file-modtime' and `calendar-time-from-absolute' now return
 a list of two integers, instead of a cons.
