--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,17 @@
 2004-08-02  Kim F. Storm  <storm@cua.dk>
 
+	* indent.c (compute_motion): Use actual window width if WIDTH is -1,
+	properly accounting for continuation glyph on non-window systems.
+	(Fcompute_motion): Use actual window width if WIDTH is nil, and
+	actual window width/height if TOPOS is nil, properly accounting for
+	continuation glyphs on non-window systems, and optional header lines.
+	(vmotion): Let compute_motion calculate actual window width.
+
+	* window.c (window_scroll_line_based): Let compute_motion
+	calculate actual window width.
+
+2004-08-02  Kim F. Storm  <storm@cua.dk>
+
 	* process.c (read_process_output): Use whole read buffer.
 	Don't trigger adaptive read buffering on errors.
 
