--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-06  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in (install-arch-indep, uninstall): Add flymake.
+
 2004-07-31  Eli Zaretskii  <eliz@gnu.org>
 
 	* config.bat: Update URLs in the comments.
